recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:1: error: ':' expected but identifier found.
def tree(int steps, double length, double angle, double shrink)    {
             ^Tree:37: error: identifier expected but '}' found.
}
^